refactor code be
